<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/goodColor"
    tools:context=".SignChooserActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tic_tac_toe"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_symbol"
        android:id="@+id/selection_text"
        android:textSize="40sp"
        android:layout_marginTop="240dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/X"
        android:text="@string/x"
        android:textSize="100sp"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_below="@id/selection_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/O"
        android:text="@string/o"
        android:textSize="100sp"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/selection_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:background="@color/greyedOut"
        android:textColor="@color/pure_white"
        android:text="@string/next"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/X"/>
</RelativeLayout>